remove default text

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <button>Generate passwords</button>
         <hr>
         <div class="generated_password_wrapper">
-            <div class="password_div"><p>ee</p></div>
-            <div class="password_div"><p>ee</p></div>
+            <div class="password_div"><p></p></div>
+            <div class="password_div"><p></p></div>
         </div>
     </div>
     <script src="./script.js"></script>
