add password one and password two tags, add onclick function to generate random 15 charcters long password inside the password one and password two divs

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <h1>Generate a<br><span id="page_title_highlight">random password</span></h1>
         <p>Never use an insecure password again.</p>
         </div>
-        <button>Generate passwords</button>
+        <button onclick="generatePassword()">Generate passwords</button>
         <hr>
         <div class="generated_password_wrapper">
-            <div class="password_div"><p></p></div>
-            <div class="password_div"><p></p></div>
+            <div class="password_div"><p id="password_one_element"></p></div>
+            <div class="password_div"><p id="password_two_element"></p></div>
         </div>
     </div>
     <script src="./script.js"></script>
